# MindAid

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  diagnostic-model-training.ipynb  docker-compose.yml  generate_secret.py  pyproject.toml  run_uv.sh
src/: __init__.py
src/mindaid/: __init__.py  auth.py  counseling.py  database.py  diagnosis.py  main.py  ml_models.py  models.py
static/img/: backgroundroom.avif
static/styles/: doctor_home.css  doctor_style.css  history.css  homepage_style.css  style_counsel.css  style_diagnosis.css
templates/: counsel.html  diagnosis.html  doctor.html  doctor_home.html  doctor_login.html  doctor_signup.html  history.html  home.html  landing.html  login.html  signup.html
