[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindaid"
version = "0.1.0"
description = "AI-powered mental health diagnosis and counseling platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core FastAPI dependencies
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    # Web framework (replacing Flask)
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    # Machine Learning & AI
    "tensorflow>=2.20.0",
    "transformers>=4.36.2",
    "torch>=2.6.0",
    "tokenizers>=0.15.0",
    "sentence-transformers>=2.2.2",
    # LangChain ecosystem
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-google-genai>=1.0.1",
    "langchain-groq>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    # Vector database
    "faiss-cpu>=1.7.4",
    # PDF processing
    "pypdf>=4.0.0",
    "pdfreader>=0.1.12",
    # HTTP client
    "httpx>=0.25.2",
    "requests>=2.32.3",
    # Data processing
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    # Visualization
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    # Development and testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    # Logging and monitoring
    "structlog>=23.2.0",
    # Security
    "bcrypt>=4.1.2",
    "cryptography>=41.0.7",
    # Production deployment
    "gunicorn>=21.2.0",
    "tf-keras>=2.15.0",
    "langchain-huggingface>=0.3.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mindaid"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]
